Update greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -347,12 +347,12 @@ import { getFirestore, doc, getDoc, setDoc, updateDoc, collection, addDoc, query
 // 🔧 REEMPLAZA CON TU CONFIGURACIÓN FIREBASE
 // ══════════════════════════════════════════
 const FIREBASE_CONFIG = {
-  apiKey:            "TU_API_KEY_AQUI",
-  authDomain:        "TU_PROYECTO.firebaseapp.com",
-  projectId:         "TU_PROYECTO_ID",
-  storageBucket:     "TU_PROYECTO.appspot.com",
-  messagingSenderId: "TU_SENDER_ID",
-  appId:             "TU_APP_ID"
+  apiKey: "AIzaSyA9yWv-2kvEuB9fdRRCxedv-r2ElrjdB1w",
+  authDomain: "ai-party-e6532.firebaseapp.com",
+  projectId: "ai-party-e6532",
+  storageBucket: "ai-party-e6532.firebasestorage.app",
+  messagingSenderId: "773125970502",
+  appId: "1:773125970502:web:43438241de73e28bb3c847"
 };
 
 const app = initializeApp(FIREBASE_CONFIG);
